--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "dotenv": "^16.0.3",
     "firebase": "^9.22.1",
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
